# student-system-server

./: .env  Cargo.toml  readme.md
src/: db.rs  main.rs
src/api/: admin.rs  classes.rs  courses.rs  login.rs  mod.rs  register.rs  video_file.rs
src/api/courses/: mod.rs
src/api/courses/course_id/: core.rs
src/api/students/: mod.rs
src/api/students/student_id/: core.rs  courses_select.rs  mod.rs  scores.rs  video.rs
src/api/teachers/: mod.rs
src/api/teachers/teacher_id/: core.rs  courses.rs  mod.rs  students.rs  videos.rs
src/api/videos/: mod.rs
src/api/videos/video_id/: core.rs
src/model/: admin_types.rs  course_types.rs  login_types.rs  mod.rs  register_types.rs  student_types.rs  teacher_types.rs  video_types.rs
