[package]
name = "student-system-server"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.78.0" , features = ["affix-state", "cors","oapi"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
mysql = "24.0.0"
serde = "1.0.197"
serde_json = "1.0"