[package]
name = "student-system-server"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.78.0" , features = ["affix-state", "cors","oapi","anyhow", "jwt-auth"] }
chrono = { version = "0.4.35", features = ["serde"] }
tokio = { version = "1", features = ["macros","full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
jsonwebtoken = "9"
time = "0.3"
bcrypt = "0.15.0"
rust_decimal = "1.30"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls","chrono"] }